infrastructure/kube/STR-deployment.yaml
# File: OpenDocSeal/infrastructure/kube/STR-deployment.yaml
# Version: 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendocseal-str-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opendocseal-str
  template:
    metadata:
      labels:
        app: opendocseal-str
    spec:
      containers:
      - name: opendocseal-str
        image: k8s.io/opendocseal_minio:latest
        imagePullPolicy: Never
 
        ports:
        - name: api
          containerPort: 9000
          protocol: TCP
        - name: console
          containerPort: 9001
          protocol: TCP

        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "15m"

        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          
        readinessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1

        volumeMounts:

        - name: minio-storage
          mountPath: /data

        - name: shared-logs
          mountPath: /var/log/minio/
          subPath: minio

      volumes:

      - name: minio-storage
        persistentVolumeClaim:
          claimName: opendocseal-str-pvc

      - name: shared-logs
        persistentVolumeClaim:
          claimName: opendocseal-logs-local-pvc
