infrastructure/kube/API-service.yaml
# File: OpenDocSeal/infrastructure/kube/API-service.yaml
# Version: 1
apiVersion: v1
kind: Service
metadata:
  name: opendocseal-api-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: opendocseal-api
