infrastructure/kube/APP-service.yaml
# File: OpenDocSeal/infrastructure/kube/APP-service.yaml
# Version: 1
apiVersion: v1
kind: Service
metadata:
  name: opendocseal-app-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: opendocseal-app
